# LLVM-essentials-13

./: .clang-format  CMakeLists.txt
chapter01/: add.c  main.c  note.md
chapter02/: CMakeLists.txt  If-Else.cpp  Loop.cpp  arithmetic.cpp  funcArgument.cpp  function.cpp  functionBlock.cpp  global.cpp  return.cpp  toy.cpp
chapter03/: CMakeLists.txt  ExtractScalarFromVec.cpp  GetAddress.cpp  InsertScalarToVec.cpp  Read-Memory.cpp  Write-Memory.cpp
chapter04/: CMakeLists.txt  FnNamePrint.cpp  run.sh  test.ll
chapter05/: intrinsic.cpp  intrinsic.ll  licm.ll  run.sh  scalev1.ll
